--- a/translations/fr.json
+++ b/translations/fr.json
@@ -1,5 +1,3 @@
 {
-  "delete-bio" : "supprimer bio",
-  "comment-placeholder" : "ajouter un commentaire ...",
-  "delete-confirmation": "[supprimé]"
+  "placeholder": "Bonjour le monde"
 }
